--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "AImpower" # the name of your site, e.g. ACME Corp.
-google-analytics: "G-M3LGTJPH39"
+google_analytics: "G-M3LGTJPH39"
 
 theme: minima
 
