Try out a theme made to work with remote theming

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ baseurl: "" # the subpath of your site, e.g. /blog
 title: "AImpower" # the name of your site, e.g. ACME Corp.
 google_analytics: "G-M3LGTJPH39"
 
-remote_theme: jekyll/minima
+remote_theme: broccolini/swiss
 
